# rakka

./: .gitignore  Cargo.toml  README.md
doc/: actor_lifecycle.md  architecture.md  supervision.md
src/: actor.rs  behavior.rs  cell.rs  context.rs  lib.rs  mailbox.rs  messages.rs  refs.rs  supervision.rs
src/test_support/: mod.rs  test_actor.rs
